--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div id="canvasWrapper">
     <!-- p5 canvas will be appended here. -->
   </div>
-    
-  <p>Description</p>
+  <h2>description</h2>
+  <p>I got my inspiration from the splendid natural phenomenon, which has an extremely romantic name: blue tears. It occurs particularly in bays and coastal areas, when certain types of microorganisms in the water emit a blueish glow when disturbed by movement or waves, creating a stunning visual display of blue light at night.</p>
 
   <!-- your script file should be included at the end of the body tag -->
   <!-- so that it can manipulate HTML elements above. -->
